Changed ordering of slots for bundled templates, fixed Edit button getting stuck on, changed button color to be more awesome :D
git-svn-id: http://svn.apostrophenow.org/plugins/apostrophePlugin/branches/1.3@336 c89fab08-2f9b-42bf-8176-bd3ad6bee547

--- a/web/css/a.css
+++ b/web/css/a.css
@@ -4853,15 +4853,15 @@ width: 480px;
 
 #a-global-toolbar #the-apostrophe
 { /* Apostrophe */
-	background-color: rgb(153,204,51);
-	background-color: rgba(153,204,51,0.65);	
+	background-color: rgb(51,204,204);
+	background-color: rgba(51,204,204,0.65);	
 }
 
 .a-btn,
 .a-submit
 { /* Background Color */
-background-color: rgb(153,204,51);
-background-color: rgba(153,204,51,0.65);
+	background-color: rgb(51,204,204);
+	background-color: rgba(51,204,204,0.65);	
 }
 
 .a-btn,
@@ -4884,21 +4884,21 @@ text-shadow: 0 -1px 0px rgba(0,0,0,0.20);
 .a-btn:hover span,
 .a-btn.icon:hover
 {/*Button Hover Style*/
-background-color: #888;
+background-color: #888 !important;
 text-decoration: none !important;
 }
 
 .a-history-browser,
 ul.a-controls .a-variant-options
 { /* Border Color */
-border-color: rgba(153,204,51,0.65);;	
+border-color: rgb(51,204,204);
 }
 
 
 #a-global-toolbar #a-logged-in-as span,
 #a-personal-settings-heading span
 { /* Text Color */
-color: rgba(153,204,51,0.65);
+color: rgb(51,204,204);
 }
 
 
